fieldset collapsers in, bugs

--- a/views/shared/css/neatline-editor.css
+++ b/views/shared/css/neatline-editor.css
@@ -271,7 +271,7 @@ tr.edit-form td {
 
 .neatline-record-edit-form form {
     padding-left: 0;
-    padding-top: 9px;
+    padding-top: 0;
     margin-bottom: 0;
     overflow: hidden;
 }
@@ -300,7 +300,8 @@ tr.edit-form td {
 }
 
 .neatline-record-edit-form fieldset {
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: visible;
     margin: 0 40px 0 20px;
     width: 90%;
     white-space: normal;
@@ -354,6 +355,32 @@ div.item-styles {
 a.fieldset {
     margin: 10px 40px 0 20px;
     display: block;
+}
+
+.neatline-record-edit-form div.clearfix:last-child {
+    margin-bottom: 0;
+}
+
+.fieldset-arrow-down {
+    position: relative;
+    float: left;
+    margin: 4px 5px 0 0;
+    width: 0;
+    height: 0;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 4px solid #000;
+}
+
+.fieldset-arrow-right {
+    position: relative;
+    float: left;
+    margin: 4px 5px 0 0;
+    width: 0;
+    height: 0;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-top: 4px solid #000;
 }
 
 
